Fix package features hr visibility

--- a/src/components/landing/Package.css
+++ b/src/components/landing/Package.css
@@ -105,7 +105,7 @@
 }
 
 .Package-features > div,
-.Package-features > {
+.Package-features > li {
   /* needed to make hr visible in prod. no idea why 😆 */
   margin: 9px 0;
 }
